# najm-course-api-seaorm

./: .env.example  .envrc.example  .gitignore  Cargo.toml  Dockerfile  README.md  apply-env.ps1  docker.nix  flake.nix  shell.nix
.cargo/: config.toml
.github/workflows/: deploy-to-vps.yaml  merge-build-test.yaml
.migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250227_001403_add_sessions_student_type.rs  m20250228_214441_adjust_sessions_table.rs  m20250302_082406_adjust_answers.rs  m20250303_155045_adjust_test_and_sessions.rs  m20250304_160308_add_weight_and_multiplier.rs  m20250304_163253_remove_test_session_id.rs  m20250305_031240_change_has_session_type.rs  m20250307_195832_add_category_to_session.rs  m20250308_154930_user_question_answer.rs  m20250309_072200_add_image_url_to_questions_and_options.rs  m20250316_055046_add_discussion_image_url.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_tables.rs  m20250118_201651_add_created_at_updated_at.rs  m20250121_00001_create_tables.rs  m20250201_124346_create_exams_related_table.rs
src/: config.rs  lib.rs  main.rs
src/apps/: mod.rs
src/apps/auth/: auth_controller.rs  auth_dto.rs  auth_middleware.rs  auth_repository.rs  mod.rs
src/apps/permissions/: mod.rs  permissions_controller.rs
src/apps/roles/: mod.rs  roles_controller.rs  roles_dto.rs  roles_repository.rs
src/apps/users/: mod.rs  users_controller.rs  users_dto.rs  users_repository.rs
src/apps/v1/: mod.rs
src/apps/v1/auth/: auth_controller.rs  auth_dto.rs  auth_middleware.rs  auth_repository.rs  mod.rs
src/apps/v1/docs/: docs_controller.rs
src/apps/v1/permissions/: mod.rs  permissions_controller.rs  permissions_dto.rs  permissions_enum.rs  permissions_middleware.rs  permissions_repository.rs
src/apps/v1/questions/: mod.rs  questions_dto.rs  questions_repository.rs
src/apps/v1/roles/: mod.rs  roles_controller.rs  roles_dto.rs  roles_enum.rs  roles_repository.rs
src/apps/v1/sessions/: mod.rs  sessions_controller.rs  sessions_dto.rs  sessions_repository.rs
src/apps/v1/storage/: mod.rs  storage_controller.rs  storage_repository.rs  storage_state.rs
src/apps/v1/tests/: mod.rs  tests_controller.rs  tests_dto.rs  tests_repository.rs
src/apps/v1/users/: mod.rs  users_controller.rs  users_dto.rs  users_repository.rs
src/apps/v2/: mod.rs
src/libs/: mod.rs
src/libs/axum/: mod.rs
src/libs/database/: mod.rs
src/libs/database/schemas/: app_permissions_schema.rs  app_questions_schema.rs  app_roles_permissions_schema.rs  (+4 more)
src/libs/email/: mod.rs
src/libs/guard/: mod.rs
src/libs/jwt/: mod.rs
src/libs/lettre/: mod.rs
src/libs/minio/: mod.rs
src/libs/otp/: mod.rs
src/libs/redis/: mod.rs
src/libs/seaorm/: init.rs  mod.rs  seeders.rs
src/utils/: dto.rs  error.rs  jwt.rs  meta.rs  mod.rs  response.rs  version.rs
(+12 files in other folders)
