[package]
name = "try-out-api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["password-hash"] }
axum = "0.7.9"
chrono = "0.4.39"
jsonwebtoken = "9.3.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
