[package]
name = "najm-course-api"
version = "0.0.1"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["password-hash"] }
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
jsonwebtoken = "9.3.0"
log = "0.4.25"
rand_core = { version = "0.6.4", features = ["getrandom"] }
sea-orm = { version = "1.1.4", features = [ "sqlx-postgres", "macros", "with-json", "with-uuid", "runtime-tokio", "runtime-tokio-native-tls"] }
sea-orm-migration = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio", "runtime-tokio-native-tls"] }
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
validator = { version = "0.19.0", features = ["derive"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
toml = "0.8.19"
lettre = { version = "0.11.11", features = ["tokio1-native-tls", "tokio1-rustls-tls"] }
rand = "0.8.5"
redis = "0.28.1"
thiserror = "2.0.11"
hyper = "1.5.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "z"
